<resources>
    <string name="app_name">ViKard</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalidFirstName">"Bad firstname"</string>
    <string name="invalid_username">"Invalid username"</string>
    <string name="invalidLastName">Invalid LastName"</string>
    <string name="invalidBirthday">"Pick a date"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_repassword">Passwords must be the same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="tab_text_1">Karty</string>
    <string name="tab_text_2">Mapa</string>
    <string name="EditCatText">Edit card category</string>
    <string name="SpinnerCatText">Pick a card</string>
    <string name="SpinnerCat">Enter your category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="karta">karta</string>

    <string name="title_activity_shop_panel">shop_panel</string>
    <string name="action_settings">Settings</string>
    <string name="color_text">Color</string>
    <string name="shop_name">Douglablablablas</string>
    <string name="cards_count">Cards count</string>
    <string name="number_of_cards">Number of cards</string>
    <string name="others_text">Others</string>
    <string name="default_description">default description</string>
    <string name="hexadecimal_color_code">hexadecimal color code</string>
    <string name="save">Save</string>
    <string name="shop_login">Shop login</string>
    <string name="user_login">User login</string>
    <string name="api">API</string>
    <string name="api_key">API key</string>

    <string name="google_maps_API_key">AIzaSyCYI0AFAj3bWe4cSVGYyJt1DtA3i17P_pw</string>
    <string name="przejd_do_sklepu">Przejdź do sklepu</string>
    <string name="store_logo">store logo</string>
    <string name="default_store_name">Default Store Name</string>
    <string name="default_store_category">Default Store Category</string>
    <string name="todo">TODO</string>
    <string name="logo">Vikard Logo</string>
    <string name="existing_user">Existing user</string>
    <string name="register_buttontext">Register</string>
    <string name="birthdayText">Birthday</string>
    <string name="retype_password">Retype password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="choose_card">Choose card</string>
    <string name="new_category">New category</string>
    <string name="edit_category">Edit Category</string>
    <string name="register">Register</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="let_s_register"><b>Let\'s Register!</b></string>
    <string name="first"><center>First let\'s create your account. Once your account has been created you can use our wonderful features.</center></string>
    <string name="accept">I agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></string>
    <string name="add"><b>Add a loyalty card to your virtual wallet!</b></string>
    <string name="qr">Use phone camera to scan barcode placed on your loyalty card. Press camera icon to proceed.</string>
    <string name="date">Provide card expiration date</string>
    <string name="category">Provide card\'s vendor</string>
    <string name="delete_card_text">Delete Card</string>
    <string name="logoutText">Logout</string>
    <string name="DiscountDescriptionString">Discount description</string>


</resources>