<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.card.EditCategoryActivity">

    <TextView
        android:id="@+id/editCatText"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:text="@string/delete_card_text"
        android:textAlignment="textStart"
        android:textDirection="locale"

        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/choose_card"
        android:textSize="23sp" />

    <Spinner
        android:id="@+id/delCardListSpinner"
        android:layout_width="275dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/SpinnerCatText" />

    <Button
        android:id="@+id/DeleteCardButton"
        android:layout_width="174dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        android:text="@string/delete_card_text"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

</LinearLayout>