<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="390dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:autoSizeTextType="uniform"
                android:text="@string/let_s_register"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="12dp"
                android:autoSizeTextType="uniform"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:text="@string/first"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="241dp"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_name_icon"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="241dp"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_sname_icon"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/birthDate"
                android:layout_width="241dp"
                android:layout_height="51dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="Birthday"
                android:inputType="date"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <EditText
                android:id="@+id/r_password"
                android:layout_width="241dp"
                android:layout_height="51dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="241dp"
                android:layout_height="51dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="4dp"
                android:ems="10"

                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/r_repassword"
                android:layout_width="241dp"
                android:layout_height="51dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="Retype password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="301dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/accept" />

            <Button
                android:id="@+id/regButton"
                android:layout_width="159dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/register"

                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>